# Symlinkarr

./: .dockerignore  .gitignore  AGENTS.md  AUTORUST.md  BAZARR_BUG_ANALYSIS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  code_review.md  config.docker.yaml  config.example.yaml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ANIME_LISTS_INTEGRATION_SPEC.md  API_SCHEMA.md  AUDIT_claude_2026-04-04.md  AUDIT_peripheral_2026-04-05.md  CHANGELOG.md  CLI_MANUAL.md  DESIGN_COUNCIL_ROADMAP.md  DEV_SETUP_WSL.md  GITHUB_WIKI_FEATURES.md  MEDIA_SERVER_ADAPTER_PLAN.md  PRODUCT_SCOPE.md  RC_ROADMAP.md  RD_DMM_FILE_RESOLUTION_SPEC.md  WEB_UI_CHARTER.md
docs/dev-notes/: AUDIT_2026-04-03.md  AUDIT_claude_2026-04-05.md  AUDIT_docs_ux_2026-04-04.md  AUDIT_features_logic_tests_2026-04-04.md  COUNCIL_2026-04-15.md  DESIGN_COUNCIL_2026-04-01.md  DESIGN_COUNCIL_2026-04-15_THEME_PORTFOLIO.md  DESIGN_COUNCIL_2026-04-16_THEME_EXPANSION.md  DESIGN_COUNCIL_2026-04-19_PRODUCT_HORIZON.md  DESIGN_COUNCIL_2026-04-22_OBSERVABILITY_STOP_POINT.md  DESIGN_COUNCIL_2026-04-22_REMAINING_WORK.md  DESIGN_COUNCIL_2026-04-23_OPERATOR_LOOPS.md  MEDIA_SERVER_ADAPTER_PLAN.md  RC_ROADMAP.md  TASKLIST_2026-04-17.md  TASKLIST_2026-04-22_POST_RC11.md  TASKLIST_2026-04-23_OPERATOR_LOOPS.md  WEB_UI_CHARTER.md  WIKI_COVERAGE_AUDIT_2026-04-21.md
docs/wiki/: Anime-Remediation.md  Backup-and-Restore.md  Cleanup-Audit-and-Prune-Preview.md  Configuration-and-Doctor.md  Dashboard-and-Daily-Operations.md  Discover-and-Queue.md  Home.md  Media-Server-Refresh-and-Deferred-Work.md  Repair-and-Dead-Links.md  Scan-History-and-Why-Not-Signals.md  _Sidebar.md
scripts/: visual-qa.mjs
src/: anime_identity.rs  anime_roots.rs  anime_scanner.rs  auto_acquire.rs  backup.rs  cache.rs  cleanup_audit.rs  config.rs  db.rs  discovery.rs  library_scanner.rs  linker.rs  main.rs  matcher.rs  models.rs  plex_db.rs  repair.rs  source_scanner.rs  startup.rs  utils.rs
src/api/: bazarr.rs  decypharr.rs  dmm.rs  http.rs  mod.rs  plex.rs  prowlarr.rs  radarr.rs  realdebrid.rs  sonarr.rs  tautulli.rs  test_helpers.rs  tmdb.rs  tvdb.rs
src/auto_acquire/: anime.rs  dmm.rs  queue.rs  tests.rs
src/backup/: manifest.rs  restore.rs  tests.rs
src/cleanup_audit/: classify.rs  prune.rs  tests.rs  types.rs
src/commands/: backup.rs  bootstrap.rs  cache.rs  cleanup.rs  config.rs  daemon.rs  discover.rs  doctor.rs  mod.rs  queue.rs  repair.rs  report.rs  restore.rs  scan.rs  status.rs
src/commands/cleanup/: anime.rs  plan.rs  tests.rs
src/commands/report/: anime.rs  path_compare.rs  tests.rs
src/commands/scan/: telemetry.rs  tests.rs
src/config/: defaults.rs  load.rs  tests.rs  validation.rs
src/db/: acquisition_jobs.rs  anime_overrides.rs  cache.rs  daemon_heartbeat.rs  links.rs  maintenance.rs  migrations.rs  scan_runs.rs  tests.rs  types.rs
src/linker/: naming.rs  tests.rs
src/matcher/: metadata.rs  scoring.rs  tests.rs
src/media_servers/: deferred.rs  emby.rs  jellyfin.rs  mod.rs  plex.rs  plex_db.rs  tests.rs
src/repair/: drift.rs  scoring.rs  tests.rs  trash.rs
src/source_scanner/: tests.rs
src/web/: auth.rs  cleanup.rs  filters.rs  handlers.rs  mod.rs  templates.rs  tests.rs
src/web/api/: cleanup.rs  misc.rs  mod.rs  scan.rs  tests.rs
src/web/handlers/: admin.rs  cleanup.rs  scan.rs  tests.rs
src/web/static/: style.css  ui-preferences.js
src/web/templates/: skip_reasons.rs  tests.rs
src/web/ui/: anime_remediation.html  anime_remediation_result.html  backup.html  backup_result.html  base.html  cleanup.html  cleanup_result.html  config.html  (+16 more)
(+22 files in other folders)
