[package]
name = "symlinkarr"
version = "0.2.0-beta.1"
edition = "2021"
authors = ["Lenny", "Gemini CLI", "Antigravity"]
description = "Intelligent symlink manager for Real-Debrid ↔ Plex"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "multipart"] }
regex = "1.10"
quick-xml = { version = "0.31", features = ["serialize"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"

rayon = "1.8"

# Web UI dependencies
axum = "0.7"
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tokio-util = { version = "0.7", features = ["io"] }
getrandom = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }
