[package]
name = "symlinkarr"
version = "1.0.0-rc.1"
edition = "2021"
authors = ["Lenny", "Gemini CLI", "Antigravity"]
description = "Intelligent symlink manager for Real-Debrid-backed media libraries"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = { package = "serde_yaml", version = "0.9" }
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "multipart", "query", "rustls"] }
regex = "1.10"
quick-xml = { version = "0.39", features = ["serialize"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"

rayon = "1.8"

# Web UI dependencies
axum = "0.8"
askama = "0.15"
tower-http = { version = "0.5", features = ["fs", "trace"] }
form_urlencoded = "1.2"
tokio-util = { version = "0.7", features = ["io"] }
getrandom = "0.4"
libc = "0.2"
futures-util = "0.3"
base64 = "0.22"
subtle = "2.6"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
strip = true
opt-level = 3
